# iXe

./: .coverage  .dockerignore  .dockerignore_web  .env.example  .gitignore  .gitignore.save  .pymon  Dockerfile  Dockerfile.optimized  Dockerfile.web  Dockerfile.web.template  Makefile  Pasted_Text_1762182036765.txt  README.md  audit.py  audit_report.txt  audit_requirements.py  check_cycles.py  check_fipi_images.py  config.py  core_api_render.py  debug_encoding.py  debug_header_analysis.py  debug_header_real_examples.py  debug_header_type.py  debug_real_header_objects.py  deps_analysis.txt  dev-requirements.txt  docker-compose.yml  extract_blocks.py  fipi_page1_wysiwyg_full.html  generate_structure.py  generate_tree.py  install.sh  local_storage.py  main.py  main.py.bak  migration_mapping_filtered.txt  mypy.ini  package-lock.json  (+24 more)
api/: answer_api.py  app.py  app.py.bak.task4  core_api.py  core_api_render.py  dependencies.py  dependencies.py.bak.task4  health.py  schemas.py
backup_api/: core_api.py  core_api_render.py
common/: __init__.py  setup.py  task_id_utils.py
data/: fipi_data.db
docs/: ICD_parser.md  OPS_manual.md  QA_plan_parser.md  SDD_parser.md  TRD_parser.md  abstraction_levels_document.md  architecture_document.md  clean_arch.md  error_handling_and_logging.md  refrefac.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
header_debug/: header_2.html
models/: database_models.py  problem_builder.py  problem_schema.py
processors/: __init__.py  asset_processor_interface.py  block_processor.py  (+9 more)
(+831 files in other folders)
